# kokoroe

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Gemfile  LICENSE  Procfile.dev  README.md  docker-compose.yml
auto-red-team-prompt/: README.md  pyproject.toml
auto-red-team-prompt/docs/: Makefile
auto-red-team-prompt/docs/source/: conf.py  index.rst
auto-red-team-prompt/scripts/: run_evaluate_response.py  run_generate_red_prompt.py  run_generate_response.py  run_server.sh  summary_safety_classification.py
auto-red-team-prompt/scripts/blue-teaming/: run_generate_red_prompt.py  run_generate_training_data.py  run_post_process.py  run_pre_process.py
auto-red-team-prompt/scripts/run_gpt-oss/: README.md
auto-red-team-prompt/src/auto_red_teaming_prompt/: __init__.py
auto-red-team-prompt/target-risks/: sample-input.json  sample-output.json  sample-red-prompt.json
auto-red-team-prompt/target-risks/blue-teaming/: openai-constitution.json  sample-constitution.json  sample-input.json  sample-output.json  sample-summary.json
auto-red-team-prompt/target-risks/test-air2024/: 42.json  43.json  44.json
auto-red-team-prompt/tests/: README.md  test_integration.py  test_utils_common.py
auto-red-team-prompt/tests/fixtures/: mock_responses.json  sample.json
auto-red-team-prompt/tests/test_generators/: __init__.py  test_constitution.py  test_evaluator.py  test_length_pool_boundary.py  test_real_data_basic.py  test_red_prompt.py  test_response.py  test_response_improve.py  test_summarizer.py
config/: application.rb  (+4 more)
(+208 files in other folders)
