[project]
name = "auto-red-teaming-prompt"
version = "0.4.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Katsumata420", email = "cof.ktmt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "langchain>=1,<2",
    "langchain-community<1",
    "langchain-openai>=1,<2",
    "langchain-classic>=1,<2",
    "pydantic>=2.11.7",
    "sacrebleu[ja]>=2.5.1",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "transformers>4.55",
    "vllm>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datasets>=4.2.0",
    "myst-parser>=5.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.6.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "I",  # isort
    "D",  # pydocstyle
]

ignore = [
    "D104",
    "D203",
    "D213",
    "D400",
    "D415",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
